June 6, 2008
        Simplify CSS inclusion code a bit.
        Separate open in new window option
        Make the title in the template be a heading 1.
        Add aux var print['url']
        Restore the print_fill_attributes function
        Remove the greybox and thickbox selection
        Add ability to specify customised classes to the PF links
June 4, 2008
        Fix #265864: fix the visibility API integration and document it in the README.txt
        Fix #266186 by aaustin: Use drupal_get_title to obtain the page title
        Fix #266318 by sun: Use theme_image for the icons (also fix #262900)
June 2, 2008
        Fix #263408: var name bug prevents site name being shown
May 30, 2008
        Fix #263349: Add CCK's CSS file to properly display inlined fields
May 21, 2008
        Enable access to print['node'] inside the template
May 13, 2008
        Added Danish translation. Thanks topsys!
        Update Changelog for 5.x-3.5
May 12, 2008
        Slightly better template vars handling
May 11, 2008
        Improve translability of template strings
May 10, 2008
        Improve the documentation
May 7, 2008
        Add selection between text, icon or both.
        Created two .inc files to harmonize with the 6.x version
May 6, 2008
        Changes to comply with http://www.drupaltoughlove.com/review/printer-friendly-pages
April 21, 2008
        Try to fix #230013: only call preg_replace with comment author link if there's anything to replace
        Added Indonesian translation. Thanks SepedaTua!
        Added Slovak translation. Thanks empError!
        Fix #230013: correct German translation
April 17, 2008
        Fix #242914: Remove duplicate PF link in top outlined pages
        Added Polish translation. Thanks sir_kula!
        Added Swedish translation. Thanks seals!
April 3, 2008
        Add thickbox module support.
        Fix #239896: Make sure drupal_get_title() returns the original page's title
April 2, 2008