@@ -30,6 +30,20 @@ function print_main_settings() {
     '#description' => t("Enable or disable the printer-friendly page link for each node. Even if the link is disabled, you can still view the print version of a node by going to print/nid where nid is the numeric id of the node."),
   );
 
+  $form['print_settings']['node_link_visibility'] = array(
+    '#type' => 'radios',
+    '#title' => t('Link visibility'),
+    '#default_value' => $print_settings['node_link_visibility'],
+    '#options' => array(t('Show on every page except the listed pages.'), t('Show on only the listed pages.')),
+  );
+
+  $form['print_settings']['node_link_pages'] = array(
+    '#type' => 'textarea',
+    '#default_value' => $print_settings['node_link_pages'],
+    '#rows' => 3,
+    '#description' => t("Enter one page per line as Drupal paths. The '*' character is a wildcard. Example paths are %blog for the blog page and %blog-wildcard for every personal blog. %front is the front page.", array('%blog' => 'blog', '%blog-wildcard' => 'blog/*', '%front' => '<front>')),
+  );
+
   $form['print_settings']['link_class'] = array(
     '#type' => 'textfield',
     '#title' => t('Link class'),
@@ -39,11 +53,19 @@ function print_main_settings() {
     '#description' => t('This can be used by themers to change the link style or by jQuery modules to open in a new window (e.g. greybox or thickbox). Multiple classes can be specified, separated by spaces.'),
   );
 
-  $form['print_settings']['show_sys_link'] = array(
-    '#type' => 'checkbox',
+  $form['print_settings']['sys_link_visibility'] = array(
+    '#type' => 'radios',
     '#title' => t('Show link in system (non-content) pages'),
-    '#default_value' => $print_settings['show_sys_link'],
-    '#description' => t('Setting this option will add a printer-friendly version page link on pages created by Drupal or the enabled modules.'),
+    '#default_value' => $print_settings['sys_link_visibility'],
+    '#options' => array(t('Show on every page except the listed pages.'), t('Show on only the listed pages.')),
+  );
+
+  $form['print_settings']['sys_link_pages'] = array(
+    '#type' => 'textarea',
+    '#default_value' => $print_settings['sys_link_pages'],
+    '#rows' => 3,
+    '#description' => t("Setting this option will add a printer-friendly version page link on pages created by Drupal or the enabled modules.") .'<br />'.
+                      t("Enter one page per line as Drupal paths. The '*' character is a wildcard. Example paths are %blog for the blog page and %blog-wildcard for every personal blog. %front is the front page.", array('%blog' => 'blog', '%blog-wildcard' => 'blog/*', '%front' => '<front>')),
   );
 
   $form['print_settings']['book_link'] = array(
@@ -168,18 +190,6 @@ function print_main_settings() {
     '#default_value' => $print_robot_settings['noarchive'],
     '#description' => t('Non-standard tag to instruct search engines to not show a "Cached" link for your printer-friendly pages. Recognized by Googlebot.'),
   );
-
-  $form['print_robot_settings']['nocache'] = array(
-    '#type' => 'checkbox',
-    '#title' => t('Add nocache'),
-    '#default_value' => $print_robot_settings['nocache'],
-    '#description' => t('Non-standard tag to instruct search engines to not show a "Cached" link for your printer-friendly pages'),
-  );
-
-  //Visibility API module
-  if (module_exists('visibility_api')) {
-    visibility_api_form_configuration('print', $form['general']);
-  }
 
   return system_settings_form($form);
 }
