@@ -1,18 +1,30 @@
+/* $Id$ */
+
 body {
   margin: 1em;
   background-color: #fff;
   font-family: sans-serif;
 }
 th {
-  text-align: left;
+  text-align: left; /* LTR */
   color: #006;
   border-bottom: 1px solid #ccc;
 }
-tr.odd {background-color: #ddd;}
-tr.even {background-color: #fff;}
-td {padding: 5px;}
-#menu {visibility: hidden;}
-#main {margin: 1em;}
+tr.odd {
+  background-color: #ddd;
+}
+tr.even {
+  background-color: #fff;
+}
+td {
+  padding: 5px;
+}
+#menu {
+  visibility: hidden;
+}
+#main {
+  margin: 1em;
+}
 a:link {color: #000;}
 a:visited {color: #000;}
 a:hover {color: #00f;}
